Use URI instead of URL to avoid MalformedURLException